--- a/style/main.css
+++ b/style/main.css
@@ -1,2 +1,5 @@
 @import url(./bootstrap.min.css);
+@import url(./cores.css);
+@import url(./global.css);
 @import url(./custom.css);
+@import url(./responsivo.css);
