--- a/style/custom.css
+++ b/style/custom.css
@@ -1,6 +1,7 @@
 body{
     background-color: var(--quarta);
 }
+/* Topo */
 #cima{
     display: block;
     width: 90%;
@@ -20,7 +21,11 @@ body{
     height: 60px;
     z-index: 9999;
     text-align: start;
-    margin-top: -280px;
+    margin-top: -260px;
+}
+#cima.activeDif{
+    margin-top: -190px;
+    border-bottom: 2px solid var(--quarta);
 }
 #cima.active .navegacao a img.logo{
     width: 172px;
@@ -33,6 +38,8 @@ body{
     top: 5px;
     margin-top: 8px;
 }
+/* /Topo */
+/* Filtro */
 #filtro{
     display: flex;
     flex-direction: column;
@@ -65,8 +72,10 @@ body{
 #filtro.active{
     position: fixed;
     z-index: 9999;
-    margin-top: -220px;
+    margin-top: -200px;
 }
+/* /Filtro */
+/* Index */
 #cardapio{
     display: block;
     width: 100%;
@@ -103,8 +112,72 @@ body{
     border: 2px solid var(--quarta);
 }
 #cardapio.active{
-    margin-top: 280px;
+    margin-top: 260px;
 }
+/* /Index */
+/* Detalhe Pedidos */
+#detalhes{
+    display: flex;
+    flex-direction: column;
+}
+#detalhes .detalhes{
+    margin-left: 20%;
+    margin-top: 50px;
+    width: 60%;
+    height: 600px;
+    background-color: var(--primeira);
+    color: var(--quarta);
+    border-radius: 20px;
+    text-align: center;
+}
+#detalhes .voltar{
+    text-decoration: none;
+    margin-left: 10%;
+    margin-top: 20px;
+}
+#detalhes .detalhes .imagem{
+    width: 60%;
+    height: 60%;
+    margin-left: 20%;
+    margin-top: 5%;
+}
+#detalhes .detalhes .textos{
+    margin-top: -20%;
+}
+#detalhes .detalhes .textos h1{
+    font-size: 20pt;
+}
+#detalhes .detalhes .textos h2{
+    font-size: 15pt;
+}
+#detalhes .detalhes .observacao form label{
+    font-size: 15pt;
+}
+#detalhes .detalhes .observacao form textarea{
+    width: 90%;
+    height: 80px;
+    background-color: var(--quarta);
+}
+#detalhes .detalhes .observacao form input{
+    margin-top: 2%;
+    width: 35px;
+    background-color: var(--quarta);
+}
+#detalhes .detalhes .observacao form div{
+    width: 100%;
+}
+#detalhes .detalhes .observacao form button{
+    margin-top: 2%;
+    border-radius: 20px;
+    background-color: var(--segunda);
+    width: 60%;
+    text-transform: uppercase;
+    color: var(--quarta);
+}
+#detalhes.active{
+    margin-top: 190px;
+}
+/* /Detalhe Pedidos */
 #carrinho{
     display: flex;
     flex-direction: column;
@@ -129,7 +202,7 @@ body{
 }
 #carrinho.active{
     position: relative;
-    margin-top: 150px;
+    margin-top: 180px;
     border-bottom: 2px solid var(--quarta);
 }
 #baixo{
