--- a/style/global.css
+++ b/style/global.css
@@ -9,7 +9,12 @@
     width: 120px;
     height: 90px;
 }
-.lupa, .zap, .insta{
+.lupa, .zap, .insta, .voltar{
     width: 40px;
     height: 40px;
+}
+.pratoPedido{
+    width: 200px;
+    height: 150px;
+    border: 2px solid var(--quarta);
 }
