--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
 <html lang="pt br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/main.css">
-    <title>Carrinho</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style/main.css">
+  <title>Carrinho</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="./index.html">Logo</a>
-        
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="./carrinho.html">Carrinho</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./historico.html">Histórico</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./pedidos.html">Pedidos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./cadPedidos.html">cadastrar rango</a>
-          </li>
-        </ul>
-      </nav>
-      
-    <h1>Carrinho</h1>
-    <form action="./index.html">
-    <center><input type="submit" value="Pagar"></center>
-    </form>
+  <!-- Navegação -->
+  <div id="cima">
+    <div class="navegacao">
+      <a href="../index.html">
+        <img src="../assets/logoG.png" alt="Logo" class="logo" id="logo">
+      </a>
+    </div>
+  </div>
+  <div class="voltar" id="voltar">
+    <a href="../index.html">
+      <img src="../assets/voltar.png" alt="voltar" class="voltar">
+    </a>
+  </div>
+  <!-- /Navegação -->
+  <!-- Carrinho -->
+  <div id="telaCarrinho">
+    <table class="tabela">
+      <div class="row">
+        <tr>
+          <th class="col-4">
+            <p>Picanha</p>
+          </th>
+          <th class="col-4">
+            <div class="row">
+              <p class="descri"></p>
+              <a href="" class="col-3 btnAd">
+                <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
+              </a>
+              <p class="col-4 meio">1</p>
+              <a href="" class="col-4 btnAd">
+                <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
+              </a>
+            </div>
+          </th>
+          <th class="col-4">
+            <p>R$ 59,99</p>
+          </th>
+        </tr>
+      </div>
+    </table>
+    <table class="tabela">
+      <div class="row">
+        <tr>
+          <th class="col-4">
+            <p>Picanha</p>
+          </th>
+          <th class="col-4">
+            <div class="row">
+              <p class="descri"></p>
+              <a class="col-3 btnAd">
+                <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
+              </a>
+              <p class="col-4">1</p>
+              <a class="col-4 btnAd">
+                <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
+              </a>
+            </div>
+          </th>
+          <th class="col-4">
+            <p>R$ 59,99</p>
+          </th>
+        </tr>
+      </div>
+    </table>
+    <div class="valorTotal">
+      <div class="row">
+        <p class="col-3 space"></p>
+        <p class="col-4 txt">Total: </p>
+        <p class="col-5 valor">R$ 119,98</p>
+      </div>
+    </div>
+    <div class="button">
+      <button>Confirmar Pedido</button>
+    </div>
+  </div>
+  <!-- /Carrinho -->
+  <!-- baixo -->
+  <div id="baixo">
+    <div class="fimpag">
+      <h2 class="titulo">Le chef</h2>
+      <h2 class="titulo">Rua fulano de tal, 100, Aldeota</h2>
+      <div class="contato">
+        <a href="#">
+          <img src="../assets/zap.png" alt="Whatsapp" class="zap">
+        </a>
+        <a href="#">
+          <img src="../assets/insta.png" alt="Instagram" class="insta">
+        </a>
+      </div>
+    </div>
+  </div>
+  <!-- /baixo -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../script/main.js"></script>
 </body>
+
 </html>
