--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -82,7 +82,7 @@
       </div>
     </div>
     <div class="button">
-      <button>Confirmar Pedido</button>
+      <button onclick='window.location.replace("../view/pagamento.html")'>Confirmar Pedido</button>
     </div>
   </div>
   <!-- /Carrinho -->
