--- a/view/login.html
+++ b/view/login.html
@@ -37,15 +37,15 @@
         <button type="submit">Entrar</button>
       </form>
       <h1>REGISTRE-SE</h1>
-      <form action="../index.html" method="post" class="">
+      <form action="../controller/controleLogin.php?acao=cadastrar"  method="post" onsubmit = "return validaCampo()">
         <label for="nome">Nome </label>
-        <input type="text">
+        <input type="text" id="nome" name="nome">
         <label for="email">Email </label>
-        <input type="text">
+        <input type="text" id="email" name="email">
         <label for="cpf">CPF </label>
-        <input type="text">
+        <input type="text" id="cpf" name="cpf">
         <label for="senha">Senha </label>
-        <input type="password">
+        <input type="password" id="senha" name="senha">
         <label for="conSenha">Confirmar </label>
         <input type="password">
         <label></label>
@@ -71,6 +71,7 @@
   </div>
   <!-- /baixo -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../script/validacao.js"></script>
   <script src="../script/main.js"></script>
 </body>
 
