--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -86,6 +86,16 @@
     </div>
   </div>
   <!-- /Carrinho -->
+  <!-- carrinho -->
+  <div id="carrinho">
+    <a href="./view/carrinho.html">
+    <div class="row">
+      <h2 class="titulo col-7">Meu carrinho</h2>
+      <h2 class="preco col-5">R$ 0,00</h2>
+    </div>
+    </a>
+  </div>
+  <!-- /carrinho -->
   <!-- baixo -->
   <div id="baixo">
     <div class="fimpag">
