--- a/view/pagamento.html
+++ b/view/pagamento.html
@@ -65,6 +65,16 @@
         </div>
     </div>
     <!-- /Pagamento -->
+    <!-- carrinho -->
+    <div id="carrinho">
+        <a href="./view/carrinho.html">
+        <div class="row">
+            <h2 class="titulo col-7">Meu carrinho</h2>
+            <h2 class="preco col-5">R$ 0,00</h2>
+        </div>
+        </a>
+    </div>
+    <!-- /carrinho -->
     <!-- baixo -->
     <div id="baixo">
         <div class="fimpag">
