--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -26,64 +26,70 @@
   <!-- /Navegação -->
   <!-- Carrinho -->
   <div id="telaCarrinho">
-    <table class="tabela">
-      <div class="row">
-        <tr>
-          <th class="col-4">
-            <p>Picanha</p>
-          </th>
-          <th class="col-4">
-            <div class="row">
-              <p class="descri"></p>
-              <a href="" class="col-3 btnAd">
-                <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
-              </a>
-              <p class="col-4 meio">1</p>
-              <a href="" class="col-4 btnAd">
-                <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
-              </a>
-            </div>
-          </th>
-          <th class="col-4">
-            <p>R$ 59,99</p>
-          </th>
-        </tr>
+    <form action="./pagamento.html" method="post">
+      <table class="tabela">
+        <div class="row">
+          <tr>
+            <th class="col-3">
+              <p>Picanha</p>
+            </th>
+            <th class="col-4">
+              <div class="row">
+                <p class="descri"></p>
+                <a href="" class="col-3 btnAd">
+                  <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
+                </a>
+                <p class="col-4 meio">1</p>
+                <a href="" class="col-4 btnAd">
+                  <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
+                </a>
+              </div>
+            </th>
+            <th class="col-4">
+              <p>R$ 59,99</p>
+            </th>
+          </tr>
+        </div>
+      </table>
+      <table class="tabela">
+        <div class="row">
+          <tr>
+            <th class="col-3">
+              <p>Picanha</p>
+            </th>
+            <th class="col-4">
+              <div class="row">
+                <p class="descri"></p>
+                <a class="col-3 btnAd">
+                  <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
+                </a>
+                <p class="col-4">1</p>
+                <a class="col-4 btnAd">
+                  <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
+                </a>
+              </div>
+            </th>
+            <th class="col-4">
+              <p>R$ 59,99</p>
+            </th>
+          </tr>
+        </div>
+      </table>
+      <div class="observacao">
+        <label for="observacao">Observações:</label>
+        <textarea name="observacao" id="observacao"></textarea>
       </div>
-    </table>
-    <table class="tabela">
-      <div class="row">
-        <tr>
-          <th class="col-4">
-            <p>Picanha</p>
-          </th>
-          <th class="col-4">
-            <div class="row">
-              <p class="descri"></p>
-              <a class="col-3 btnAd">
-                <img src="../assets/btnMe.png" class="btnMe" alt="Menos">
-              </a>
-              <p class="col-4">1</p>
-              <a class="col-4 btnAd">
-                <img src="../assets/btnMa.png" class="btnMa" alt="Mais">
-              </a>
-            </div>
-          </th>
-          <th class="col-4">
-            <p>R$ 59,99</p>
-          </th>
-        </tr>
+      <div class="valorTotal">
+        <div class="row">
+          <p class="col-3 space"></p>
+          <p class="col-4 txt">Total: </p>
+          <p class="col-5 valor">R$ 119,98</p>
+        </div>
       </div>
-    </table>
-    <div class="valorTotal">
-      <div class="row">
-        <p class="col-3 space"></p>
-        <p class="col-4 txt">Total: </p>
-        <p class="col-5 valor">R$ 119,98</p>
+      <div class="button">
+        <button type="submit">Comfirmar Pedido</button>
       </div>
-    </div>
-    <div class="button">
-      <button onclick='window.location.replace("../view/pagamento.html")'>Confirmar Pedido</button>
-    </div>
+    </form>
   </div>
   <!-- /Carrinho -->
   <!-- baixo -->
