--- a/view/carrinho.html
+++ b/view/carrinho.html
@@ -13,13 +13,13 @@
   <!-- Navegação -->
   <div id="cima">
     <div class="navegacao">
-      <a href="../index.html">
+      <a href="../index.php">
         <img src="../assets/logoG.png" alt="Logo" class="logo" id="logo">
       </a>
     </div>
   </div>
   <div class="voltar" id="voltar">
-    <a href="../index.html">
+    <a href="../index.php">
       <img src="../assets/voltar.png" alt="voltar" class="voltar">
     </a>
   </div>
